@@ -820,7 +820,7 @@ $q = "
 CREATE TABLE `user_roles` (
   `user_id` int(11)  ,
   `rid` int(11)   DEFAULT '0',
-  PRIMARY KEY (`user_id`),
+  PRIMARY KEY (`user_id`,`rid`),
   KEY (`rid`)
 ); ";
 db_query($q);
